Adding help link

--- a/app/states/root/components/directives/fd-example-search.html
+++ b/app/states/root/components/directives/fd-example-search.html
@@ -19,13 +19,8 @@
     </div>
   </div>
   <div>
-    <a href="https://github.com/formly-js/angular-formly-website/issues/new?title=New%20Example:&body=I%20would%20like%20an%20example%20that%20demonstrates:">
-      Ask for an example
-    </a>
-  </div>
-  <div>
-    <a href="https://github.com/formly-js/angular-formly-website/blob/master/CONTRIBUTING.md">
-      Suggest an example
+    <a href="http://help.angular-formly.com">
+      Get Help
     </a>
   </div>
 </div>
