Add tillr closes #82

--- a/app/states/root/children/users/index.css
+++ b/app/states/root/children/users/index.css
@@ -4,4 +4,9 @@
     float: left;
     padding: 15px;
   }
+  .user-name {
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: 14px;
+  }
 }
